--- a/CurrencyConverter/CurrencyConverter/Modules/Wallet/Wallet.storyboard
+++ b/CurrencyConverter/CurrencyConverter/Modules/Wallet/Wallet.storyboard
@@ -19,16 +19,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UCY-eo-Cqm">
-                                <rect key="frame" x="0.0" y="149.66666666666669" width="390" height="660.33333333333326"/>
+                                <rect key="frame" x="0.0" y="47" width="390" height="763"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lSC-vp-BrV">
-                                        <rect key="frame" x="0.0" y="0.0" width="390" height="644.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="747"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="eeX-kj-X6k">
-                                                <rect key="frame" x="16" y="0.0" width="358" height="644.33333333333337"/>
+                                                <rect key="frame" x="16" y="0.0" width="358" height="747"/>
                                                 <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cwU-ai-D4T" userLabel="Spacer">
+                                                        <rect key="frame" x="0.0" y="0.0" width="358" height="16"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="16" id="UUt-Lv-d06"/>
+                                                        </constraints>
+                                                    </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Fpf-sK-qRT">
-                                                        <rect key="frame" x="0.0" y="0.0" width="358" height="57.666666666666664"/>
+                                                        <rect key="frame" x="0.0" y="15.999999999999996" width="358" height="57.666666666666657"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TOTAL BALANCE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hB7-im-vpJ">
                                                                 <rect key="frame" x="0.0" y="0.0" width="358" height="17"/>
@@ -45,14 +52,14 @@
                                                         </subviews>
                                                     </stackView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="La0-mV-HXQ" userLabel="Spacer">
-                                                        <rect key="frame" x="0.0" y="57.666666666666686" width="358" height="48"/>
+                                                        <rect key="frame" x="0.0" y="73.666666666666671" width="358" height="48"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="48" id="dZj-cN-Ase"/>
                                                         </constraints>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="NiJ-ZB-HoY">
-                                                        <rect key="frame" x="0.0" y="105.66666666666669" width="358" height="162"/>
+                                                        <rect key="frame" x="0.0" y="121.66666666666666" width="358" height="161.99999999999997"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Xdq-VO-fa4">
                                                                 <rect key="frame" x="0.0" y="0.0" width="358" height="69"/>
@@ -64,7 +71,7 @@
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="jUR-XI-Gbk">
-                                                                        <rect key="frame" x="0.0" y="24.999999999999972" width="358" height="44"/>
+                                                                        <rect key="frame" x="0.0" y="25" width="358" height="44"/>
                                                                         <subviews>
                                                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0.00" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Bl1-GZ-0pj">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="248" height="44"/>
@@ -90,7 +97,7 @@
                                                                 </subviews>
                                                             </stackView>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="g0U-34-kei">
-                                                                <rect key="frame" x="0.0" y="92.999999999999972" width="358" height="69"/>
+                                                                <rect key="frame" x="0.0" y="93.000000000000028" width="358" height="69"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2JP-Ra-XFw">
                                                                         <rect key="frame" x="0.0" y="0.0" width="358" height="17"/>
@@ -127,11 +134,11 @@
                                                         </subviews>
                                                     </stackView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vtf-DT-Vmh" userLabel="Spacer">
-                                                        <rect key="frame" x="0.0" y="267.66666666666663" width="358" height="256.66666666666663"/>
+                                                        <rect key="frame" x="0.0" y="283.66666666666674" width="358" height="343.33333333333326"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VNy-Yx-8jm">
-                                                        <rect key="frame" x="0.0" y="524.33333333333337" width="358" height="50"/>
+                                                        <rect key="frame" x="0.0" y="627" width="358" height="50"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ikc-Mf-4P9">
                                                                 <rect key="frame" x="8" y="8" width="342" height="34"/>
@@ -149,20 +156,20 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L3p-df-CPy" userLabel="Spacer">
-                                                        <rect key="frame" x="0.0" y="574.33333333333337" width="358" height="16"/>
+                                                        <rect key="frame" x="0.0" y="677" width="358" height="16"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="16" id="U96-Fk-6gF"/>
                                                         </constraints>
                                                     </view>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RlE-KP-88X">
-                                                        <rect key="frame" x="0.0" y="590.33333333333337" width="358" height="54"/>
+                                                        <rect key="frame" x="0.0" y="693" width="358" height="54"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="54" id="zoC-rg-8Sz"/>
                                                         </constraints>
                                                         <color key="tintColor" systemColor="systemGreenColor"/>
                                                         <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="filled" title="CONVERT"/>
                                                     </button>
                                                 </subviews>
                                             </stackView>
@@ -200,7 +207,47 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1046.1538461538462" y="-28.436018957345969"/>
+            <point key="canvasLocation" x="1854" y="-28"/>
+        </scene>
+        <!--Wallet-->
+        <scene sceneID="Juc-aj-SYZ">
+            <objects>
+                <viewController id="kcM-Qf-d5Q" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="f4v-cg-xnY">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="G5i-vS-2jo">
+                                <rect key="frame" x="0.0" y="149.66666666666669" width="390" height="660.33333333333326"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xip-zy-4dU" userLabel="Spacer">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="16"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="16" id="E9s-Yk-mQi"/>
+                                        </constraints>
+                                    </view>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ehy-jB-HQm">
+                                        <rect key="frame" x="0.0" y="16" width="390" height="644.33333333333337"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </tableView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="5RC-tt-6h9"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="G5i-vS-2jo" firstAttribute="leading" secondItem="5RC-tt-6h9" secondAttribute="leading" id="S5F-jc-773"/>
+                            <constraint firstItem="5RC-tt-6h9" firstAttribute="bottom" secondItem="G5i-vS-2jo" secondAttribute="bottom" id="c54-hw-y48"/>
+                            <constraint firstItem="G5i-vS-2jo" firstAttribute="top" secondItem="5RC-tt-6h9" secondAttribute="top" id="knI-jH-8wS"/>
+                            <constraint firstItem="5RC-tt-6h9" firstAttribute="trailing" secondItem="G5i-vS-2jo" secondAttribute="trailing" id="tFJ-gh-4cG"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Wallet" largeTitleDisplayMode="always" id="4rJ-34-pCo"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="39i-sY-Ath" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="980" y="-28"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pbc-Er-Faj">
@@ -218,7 +265,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="xa6-sN-lZn"/>
+                        <segue destination="kcM-Qf-d5Q" kind="relationship" relationship="rootViewController" id="zEM-ts-V4v"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TH0-HB-LXz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
