--- a/CurrencyConverter/CurrencyConverter/Modules/Wallet/TableCells/CurrencyTableCell/CurrencyTableCell.xib
+++ b/CurrencyConverter/CurrencyConverter/Modules/Wallet/TableCells/CurrencyTableCell/CurrencyTableCell.xib
@@ -4,12 +4,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="THh-fL-FKP" customClass="CurrencyTableCell" customModule="CurrencyConverter" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="CurrencyTableCell" id="THh-fL-FKP" customClass="CurrencyTableCell" customModule="CurrencyConverter" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="THh-fL-FKP" id="Imq-qE-oAv">
@@ -17,52 +18,64 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0HZ-D8-p1t">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="60"/>
+                        <rect key="frame" x="16" y="8" width="358" height="44"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="gAM-qM-AgW">
-                                <rect key="frame" x="16" y="16" width="358" height="44"/>
+                                <rect key="frame" x="12" y="0.0" width="334" height="44"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vjg-J0-4eI">
-                                        <rect key="frame" x="0.0" y="0.0" width="54" height="44"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00, 000.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7t-Ry-b9P">
+                                        <rect key="frame" x="0.0" y="0.0" width="264" height="44"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
+                                        <color key="textColor" systemColor="systemGreenColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vjg-J0-4eI">
+                                        <rect key="frame" x="280" y="0.0" width="54" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="54" id="lNU-Bo-Mmu"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00, 000.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7t-Ry-b9P">
-                                        <rect key="frame" x="70" y="0.0" width="288" height="44"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
-                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                        <color key="textColor" systemColor="systemBlueColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="gAM-qM-AgW" secondAttribute="bottom" id="1RO-hL-k0F"/>
-                            <constraint firstItem="gAM-qM-AgW" firstAttribute="top" secondItem="0HZ-D8-p1t" secondAttribute="top" constant="16" id="9om-5M-PEW"/>
-                            <constraint firstAttribute="trailing" secondItem="gAM-qM-AgW" secondAttribute="trailing" constant="16" id="SNf-zA-lfc"/>
-                            <constraint firstItem="gAM-qM-AgW" firstAttribute="leading" secondItem="0HZ-D8-p1t" secondAttribute="leading" constant="16" id="hHG-Az-Ytu"/>
+                            <constraint firstItem="gAM-qM-AgW" firstAttribute="top" secondItem="0HZ-D8-p1t" secondAttribute="top" id="9om-5M-PEW"/>
+                            <constraint firstAttribute="trailing" secondItem="gAM-qM-AgW" secondAttribute="trailing" constant="12" id="SNf-zA-lfc"/>
+                            <constraint firstItem="gAM-qM-AgW" firstAttribute="leading" secondItem="0HZ-D8-p1t" secondAttribute="leading" constant="12" id="hHG-Az-Ytu"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="0HZ-D8-p1t" firstAttribute="leading" secondItem="Imq-qE-oAv" secondAttribute="leading" id="c8o-Td-R9d"/>
-                    <constraint firstAttribute="bottom" secondItem="0HZ-D8-p1t" secondAttribute="bottom" id="ubX-dS-xhZ"/>
-                    <constraint firstItem="0HZ-D8-p1t" firstAttribute="top" secondItem="Imq-qE-oAv" secondAttribute="top" id="y7E-NA-ZMa"/>
-                    <constraint firstAttribute="trailing" secondItem="0HZ-D8-p1t" secondAttribute="trailing" id="zkl-65-d7M"/>
+                    <constraint firstItem="0HZ-D8-p1t" firstAttribute="leading" secondItem="Imq-qE-oAv" secondAttribute="leading" constant="16" id="c8o-Td-R9d"/>
+                    <constraint firstAttribute="bottom" secondItem="0HZ-D8-p1t" secondAttribute="bottom" constant="8" id="ubX-dS-xhZ"/>
+                    <constraint firstItem="0HZ-D8-p1t" firstAttribute="top" secondItem="Imq-qE-oAv" secondAttribute="top" constant="8" id="y7E-NA-ZMa"/>
+                    <constraint firstAttribute="trailing" secondItem="0HZ-D8-p1t" secondAttribute="trailing" constant="16" id="zkl-65-d7M"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="balanceLabel" destination="y7t-Ry-b9P" id="aKL-1n-gPx"/>
+                <outlet property="containerView" destination="0HZ-D8-p1t" id="1ZA-wM-5ib"/>
                 <outlet property="currencyLabel" destination="Vjg-J0-4eI" id="ofL-uM-HE9"/>
             </connections>
             <point key="canvasLocation" x="48" y="3"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
