--- a/CurrencyConverter/CurrencyConverter/Modules/Wallet/TableCells/CurrencyTableCell/CurrencyTableCell.xib
+++ b/CurrencyConverter/CurrencyConverter/Modules/Wallet/TableCells/CurrencyTableCell/CurrencyTableCell.xib
@@ -17,27 +17,37 @@
                 <rect key="frame" x="0.0" y="0.0" width="390" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0HZ-D8-p1t">
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0HZ-D8-p1t">
                         <rect key="frame" x="16" y="8" width="358" height="44"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="gAM-qM-AgW">
-                                <rect key="frame" x="12" y="0.0" width="334" height="44"/>
+                                <rect key="frame" x="12" y="0.0" width="346" height="44"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00, 000.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7t-Ry-b9P">
-                                        <rect key="frame" x="0.0" y="0.0" width="264" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="256" height="44"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
-                                        <color key="textColor" systemColor="systemGreenColor"/>
+                                        <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vjg-J0-4eI">
-                                        <rect key="frame" x="280" y="0.0" width="54" height="44"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xco-4e-NBI">
+                                        <rect key="frame" x="272" y="0.0" width="74" height="44"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vjg-J0-4eI">
+                                                <rect key="frame" x="0.0" y="0.0" width="74" height="44"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBlueColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="54" id="lNU-Bo-Mmu"/>
+                                            <constraint firstItem="Vjg-J0-4eI" firstAttribute="top" secondItem="Xco-4e-NBI" secondAttribute="top" id="1aa-eH-hWa"/>
+                                            <constraint firstAttribute="trailing" secondItem="Vjg-J0-4eI" secondAttribute="trailing" id="fXo-BX-L9m"/>
+                                            <constraint firstAttribute="bottom" secondItem="Vjg-J0-4eI" secondAttribute="bottom" id="p8Y-gX-DpJ"/>
+                                            <constraint firstItem="Vjg-J0-4eI" firstAttribute="leading" secondItem="Xco-4e-NBI" secondAttribute="leading" id="u9s-0j-BHy"/>
+                                            <constraint firstAttribute="width" constant="74" id="vje-jq-IAi"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
-                                        <color key="textColor" systemColor="systemBlueColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    </view>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -45,7 +55,7 @@
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="gAM-qM-AgW" secondAttribute="bottom" id="1RO-hL-k0F"/>
                             <constraint firstItem="gAM-qM-AgW" firstAttribute="top" secondItem="0HZ-D8-p1t" secondAttribute="top" id="9om-5M-PEW"/>
-                            <constraint firstAttribute="trailing" secondItem="gAM-qM-AgW" secondAttribute="trailing" constant="12" id="SNf-zA-lfc"/>
+                            <constraint firstAttribute="trailing" secondItem="gAM-qM-AgW" secondAttribute="trailing" id="SNf-zA-lfc"/>
                             <constraint firstItem="gAM-qM-AgW" firstAttribute="leading" secondItem="0HZ-D8-p1t" secondAttribute="leading" constant="12" id="hHG-Az-Ytu"/>
                         </constraints>
                     </view>
@@ -73,9 +83,6 @@
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
